@@ -37,7 +37,7 @@ import org.gjt.sp.util.Log;
  * The default input handler. It maps sequences of keystrokes into actions
  * and inserts key typed events into the text area.
  * @author Slava Pestov
- * @version $Id: DefaultInputHandler.java,v 1.43 2005/01/09 01:47:38 spestov Exp $
+ * @version $Id: DefaultInputHandler.java,v 1.44 2005/01/09 19:44:54 spestov Exp $
  */
 public class DefaultInputHandler extends InputHandler
 {
@@ -335,34 +335,14 @@ public class DefaultInputHandler extends InputHandler
 				repeatCount = 1;
 				setCurrentBindings(bindings);
 			}
-
-			if(input != '\0')
+			else if(input != '\0')
 				userInput(input);
 			else
 			{
 				// this is retarded. excuse me while I drool
 				// and make stupid noises
-				switch(keyStroke.key)
-				{
-				case KeyEvent.VK_NUMPAD0:
-				case KeyEvent.VK_NUMPAD1:
-				case KeyEvent.VK_NUMPAD2:
-				case KeyEvent.VK_NUMPAD3:
-				case KeyEvent.VK_NUMPAD4:
-				case KeyEvent.VK_NUMPAD5:
-				case KeyEvent.VK_NUMPAD6:
-				case KeyEvent.VK_NUMPAD7:
-				case KeyEvent.VK_NUMPAD8:
-				case KeyEvent.VK_NUMPAD9:
-				case KeyEvent.VK_MULTIPLY:
-				case KeyEvent.VK_ADD:
-				/* case KeyEvent.VK_SEPARATOR: */
-				case KeyEvent.VK_SUBTRACT:
-				case KeyEvent.VK_DECIMAL:
-				case KeyEvent.VK_DIVIDE:
+				if(KeyEventWorkaround.isNumericKeypad(keyStroke.key))
 					KeyEventWorkaround.numericKeypadKey();
-					break;
-				}
 			}
 		}
 		else if(o instanceof Hashtable)
