@@ -27,11 +27,12 @@ import java.awt.*;
 import java.util.*;
 import org.gjt.sp.jedit.gui.GrabKeyDialog;
 import org.gjt.sp.jedit.*;
+import org.gjt.sp.util.Log;
 
 /**
  * Key binding editor.
  * @author Slava Pestov
- * @version $Id: ShortcutsOptionPane.java,v 1.10 2004/05/12 20:44:17 spestov Exp $
+ * @version $Id: ShortcutsOptionPane.java,v 1.11 2005/01/09 19:44:54 spestov Exp $
  */
 public class ShortcutsOptionPane extends AbstractOptionPane
 {
@@ -95,7 +96,7 @@ public class ShortcutsOptionPane extends AbstractOptionPane
 				String modelLabel = actionSet.getLabel();
 				if(modelLabel == null)
 				{
-					System.err.println("Empty action set: "
+					Log.log(Log.ERROR,this,"Empty action set: "
 						+ actionSet.getPluginJAR());
 				}
 				models.addElement(createModel(modelLabel,
